--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       background: transparent;
       color: var(--text-muted);
       padding: 6px 14px;
-      font-size: 16px;      /* readable, avoids iOS zoom issues */
+      font-size: 16px;      /* readable, avoids iOS zoom */
       border-radius: var(--radius-pill);
       cursor: pointer;
       white-space: nowrap;
@@ -194,8 +194,8 @@
       height: 22px;
       border-radius: 999px;
       border: 1px solid rgba(255, 255, 255, 0.45);
-      background: rgba(255, 255, 255, 0.45);   /* filled same as outline */
-      color: #000000;                           /* black “X” */
+      background: rgba(255, 255, 255, 0.45); /* same as outline colour */
+      color: #000000;                         /* black "X" */
       font-size: 0.9rem;
       line-height: 1;
       display: none;
@@ -225,13 +225,12 @@
       color: var(--text-muted);
       gap: 6px;
       flex-wrap: wrap;
-      min-height: 1.2em;
     }
 
     .results {
-      margin-top: 10px;
-      border-top: none;   /* remove extra line */
+      margin-top: 12px;
       padding-top: 0;
+      border-top: none;   /* no horizontal line above results */
       max-height: none;
       overflow: visible;
     }
@@ -239,11 +238,6 @@
     .result-item {
       padding: 10px 0;
       border-bottom: 1px solid rgba(255, 255, 255, 0.08);
-    }
-
-    .result-item:first-child {
-      border-top: 1px solid rgba(255, 255, 255, 0.16); /* single divider above first result */
-      padding-top: 10px;
     }
 
     .result-item:last-child {
@@ -285,9 +279,9 @@
       color: #ffb3b3;
     }
 
-    .results-hint {
-      margin-top: 8px;
-      font-size: 0.8rem;
+    .results-tip {
+      margin-top: 10px;
+      font-size: 0.75rem;
       color: var(--text-muted);
     }
 
@@ -296,7 +290,7 @@
     .room-map-wrapper {
       margin-top: 18px;
       padding-top: 0;
-      border-top: none;   /* no extra line above map */
+      border-top: none;   /* no horizontal line above map */
     }
 
     .map-title {
@@ -451,7 +445,7 @@
             <p class="hint">Search ignores case and punctuation such as apostrophes.</p>
           </div>
 
-          <!-- Table dropdown (kept for code simplicity, but always hidden) -->
+          <!-- Table dropdown (kept for logic, but always hidden in this UI) -->
           <div class="field" id="panel-table" style="display:none;">
             <label for="tableSelect">Table number</label>
             <select id="tableSelect">
@@ -470,10 +464,7 @@
         <!-- Error -->
         <div class="error-state" id="errorMessage" role="alert" style="display:none;"></div>
 
-        <!-- Results -->
-        <section class="results" id="results" aria-live="polite" aria-label="Guest results list"></section>
-
-        <!-- Room map -->
+        <!-- Room map (now ABOVE results) -->
         <section
           class="room-map-wrapper"
           id="roomMapWrapper"
@@ -799,6 +790,9 @@
             </svg>
           </div>
         </section>
+
+        <!-- Results (now BELOW the map) -->
+        <section class="results" id="results" aria-live="polite" aria-label="Guest results list"></section>
       </main>
     </div>
   </div>
@@ -818,7 +812,7 @@
       searchTerm: "",
       selectedTable: "",
       loaded: false,
-      tableGuestCounts: {}
+      tableCounts: {}
     };
 
     const dom = {};
@@ -854,7 +848,6 @@
       });
 
       dom.tableSelect.addEventListener("change", () => {
-        // Dropdown kept hidden; code left for completeness
         state.selectedTable = dom.tableSelect.value;
         render();
       });
@@ -874,10 +867,9 @@
           el.addEventListener("click", () => {
             const table = el.getAttribute("data-table");
             if (!table) return;
-            setMode("table");
             state.selectedTable = table;
-            dom.tableSelect.value = table; // keeps things in sync, even if hidden
-            render();
+            dom.tableSelect.value = table;
+            setMode("table"); // will also call render()
             dom.results.scrollTop = 0;
           });
         });
@@ -894,7 +886,7 @@
         }
         const text = await response.text();
         state.guests = parseCsv(text);
-        state.tableGuestCounts = computeTableGuestCounts(state.guests);
+        computeTableCounts();
         state.loaded = true;
         buildTableDropdown(state.guests); // fills hidden dropdown
         render();
@@ -906,6 +898,17 @@
         dom.activeFilter.textContent = "Guest list unavailable.";
         dom.results.innerHTML = "";
       }
+    }
+
+    function computeTableCounts() {
+      const counts = {};
+      state.guests.forEach(g => {
+        const t = (g.table || "").trim();
+        if (!t) return;
+        const key = t.toLowerCase();
+        counts[key] = (counts[key] || 0) + 1;
+      });
+      state.tableCounts = counts;
     }
 
     // Normalise strings for search
@@ -986,16 +989,6 @@
       return guests;
     }
 
-    function computeTableGuestCounts(guests) {
-      const counts = {};
-      guests.forEach(g => {
-        const table = (g.table || "").trim();
-        if (!table) return;
-        counts[table] = (counts[table] || 0) + 1;
-      });
-      return counts;
-    }
-
     function buildTableDropdown(guests) {
       const tables = Array.from(
         new Set(
@@ -1023,7 +1016,6 @@
     }
 
     function setMode(mode) {
-      if (mode === state.mode) return;
       state.mode = mode;
 
       if (mode === "search") {
@@ -1032,7 +1024,7 @@
         dom.modeSearchBtn.setAttribute("aria-selected", "true");
         dom.modeTableBtn.setAttribute("aria-selected", "false");
         dom.searchPanel.style.display = "";
-        dom.tablePanel.style.display = "none"; // stays hidden
+        dom.tablePanel.style.display = "none";
         dom.searchInput.focus();
       } else {
         dom.modeTableBtn.classList.add("active");
@@ -1040,7 +1032,7 @@
         dom.modeTableBtn.setAttribute("aria-selected", "true");
         dom.modeSearchBtn.setAttribute("aria-selected", "false");
         dom.searchPanel.style.display = "none";
-        dom.tablePanel.style.display = "none";
+        dom.tablePanel.style.display = "none"; // UI is map-only
       }
 
       render();
@@ -1070,7 +1062,6 @@
       if (!dom.roomMapWrapper || !dom.mapTables) return;
 
       const isTableMode = state.mode === "table";
-      const table = (state.selectedTable || "").trim();
 
       if (!isTableMode) {
         dom.roomMapWrapper.style.display = "none";
@@ -1081,9 +1072,10 @@
       // In table mode: always show the map
       dom.roomMapWrapper.style.display = "";
 
+      const selected = (state.selectedTable || "").trim().toLowerCase();
       dom.mapTables.forEach(el => {
-        const isActive = table && el.getAttribute("data-table") === table;
-        el.classList.toggle("active", !!isActive);
+        const t = (el.getAttribute("data-table") || "").trim().toLowerCase();
+        el.classList.toggle("active", !!selected && t === selected);
       });
     }
 
@@ -1097,10 +1089,9 @@
 
       const isSearchMode = state.mode === "search";
       const searchTermNormalized = normalizeForSearch(state.searchTerm);
-      const selectedTableTrimmed = (state.selectedTable || "").trim();
       const hasQuery = isSearchMode
         ? searchTermNormalized.length > 0
-        : selectedTableTrimmed.length > 0;
+        : (state.selectedTable || "").trim().length > 0;
 
       if (dom.clearSearchBtn) {
         if (searchTermNormalized.length > 0 && isSearchMode) {
@@ -1110,7 +1101,7 @@
         }
       }
 
-      // Summary text (top right)
+      // Active filter text
       if (!hasQuery) {
         dom.activeFilter.textContent = "";
       } else if (isSearchMode) {
@@ -1118,32 +1109,25 @@
           ? `Filter: “${state.searchTerm}”`
           : "";
       } else {
-        const table = selectedTableTrimmed;
-        if (table) {
-          const count = (state.tableGuestCounts && state.tableGuestCounts[table]) || 0;
-          let label;
-          if (count === 0) {
-            label = `Table: ${table}`;
-          } else if (count === 1) {
-            label = `Table: ${table} (1 guest)`;
+        const t = (state.selectedTable || "").trim();
+        const key = t.toLowerCase();
+        const count = state.tableCounts[key] || 0;
+        if (t) {
+          if (count > 0) {
+            dom.activeFilter.textContent = `Table: ${t} (${count} ${count === 1 ? "guest" : "guests"})`;
           } else {
-            label = `Table: ${table} (${count} guests)`;
+            dom.activeFilter.textContent = `Table: ${t}`;
           }
-          dom.activeFilter.textContent = label;
         } else {
           dom.activeFilter.textContent = "";
         }
       }
 
-      // No query yet: show hints, no results
+      // No query yet
       if (!hasQuery) {
-        if (isSearchMode) {
-          dom.results.innerHTML =
-            '<div class="empty-state">Begin by typing a first name, last name, or company.</div>';
-        } else {
-          // In table mode, rely on the map header/hint only
-          dom.results.innerHTML = "";
-        }
+        dom.results.innerHTML = isSearchMode
+          ? '<div class="empty-state">Begin by typing a first name, last name, or company.</div>'
+          : '<div class="empty-state">Tap any table on the map to see who is seated there.</div>';
         updateMapHighlight();
         return;
       }
@@ -1151,10 +1135,9 @@
       const guests = getFilteredGuests();
 
       if (guests.length === 0) {
-        const msg = isSearchMode
-          ? "No results found. Please check the spelling or try a different name or company."
-          : "No results found for this table.";
-        dom.results.innerHTML = `<div class="empty-state">${msg}</div>`;
+        dom.results.innerHTML = isSearchMode
+          ? '<div class="empty-state">No results found. Please check the spelling or try a different name or company.</div>'
+          : '<div class="empty-state">No guests are currently assigned to this table.</div>';
         updateMapHighlight();
         return;
       }
@@ -1191,10 +1174,10 @@
 
       // TIP under results in search mode
       if (isSearchMode) {
-        const hint = document.createElement("div");
-        hint.className = "results-hint";
-        hint.textContent = "TIP: Tap the table number to see where it is in the room.";
-        dom.results.appendChild(hint);
+        const tip = document.createElement("div");
+        tip.className = "results-tip";
+        tip.textContent = "TIP: Tap the table number to see where it is in the room.";
+        dom.results.appendChild(tip);
       }
 
       // Clicking "TABLE X" in results switches to table mode and highlights on map
@@ -1202,19 +1185,9 @@
       tableLinks.forEach(btn => {
         btn.addEventListener("click", () => {
           const table = btn.getAttribute("data-table");
-
-          state.mode = "table";
-          dom.modeSearchBtn.classList.remove("active");
-          dom.modeTableBtn.classList.add("active");
-          dom.modeSearchBtn.setAttribute("aria-selected", "false");
-          dom.modeTableBtn.setAttribute("aria-selected", "true");
-          dom.searchPanel.style.display = "none";
-          dom.tablePanel.style.display = "none";
-
-          dom.tableSelect.value = table;
           state.selectedTable = table;
-
-          render();
+          dom.tableSelect.value = table;
+          setMode("table"); // will also call render()
           dom.results.scrollTop = 0;
         });
       });
